--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 
 	<body>
 		<header>
-			<h1 class="titulo-principal">Barbearia Alura</h1>
+			<h1 class="titulo-principal">Barbearia Alura Cascavel</h1>
 		</header>
 		<img id="banner" src="banner.jpg">
 		<div class="principal">
 			<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
 	 
-			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+			<p>Localizada no coração da cidade hospitaleira a <strong>Barbearia Alura Cascavel</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia no fiado.</p>
 
-			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes calvos"</strong>.</em></p>
 
 			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 		</div>
@@ -25,10 +25,10 @@
 			<h3 class="titulo-centralizado">Benefícios</h3>
 
 			<ul>
-				<li class="itens">Atendimento aos Clientes</li>
-				<li class="itens">Espaço diferenciado</li>
-				<li class="itens">Localização</li>
-				<li class="itens">Profissionais Qualificados</li>
+				<li class="itens">Atendimento diferenciado</li>
+				<li class="itens">Espaço climatizado</li>
+				<li class="itens">Pertinho na rua Estilac Leal 654</li>
+				<li class="itens">Cortes no crédito, débito e caderneta.</li>
 			</ul>
 
 			<img src="beneficios.jpg" class="imagembeneficios">
