--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 		</header>
 		<img id="banner" src="banner.jpg">
 		<div class="principal">
-			<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+			<h2 class="titulo-centralizado">Sobre a Barbearia Alura Cascavel</h2>
 	 
 			<p>Localizada no coração da cidade hospitaleira a <strong>Barbearia Alura Cascavel</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia no fiado.</p>
 
-			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes calvos"</strong>.</em></p>
+			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes calvos, somos excelência na reconstrução capilar"</strong>.</em></p>
 
-			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+			<p>Oferecemos profissionais dedicados, em processo de aprendizagem e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação aos clientes.</p>
 		</div>
 
 		<div class="beneficios">
-			<h3 class="titulo-centralizado">Benefícios</h3>
+			<h3 class="titulo-centralizado">Benefícios cliente hair Alura</h3>
 
 			<ul>
 				<li class="itens">Atendimento diferenciado</li>
