--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<ul>
 				<li class="itens">Atendimento diferenciado</li>
 				<li class="itens">Espaço climatizado</li>
-				<li class="itens">Pertinho na rua Estilac Leal 654</li>
+				<li class="itens">Rua Estilac Leal 654</li>
 				<li class="itens">Cortes no crédito, débito e caderneta.</li>
 			</ul>
 
